k8s/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-script-app
spec:
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - image: locustio/locust
        name: locust
        ports:
        - containerPort: 8089
        volumeMounts:
        - mountPath: /home/locust
          name: locust-script
        resources:
         limits:
           memory: 800Mi
           cpu: "2"
         requests:
           memory: 512Mi
           cpu: "1"
      volumes:
      - configMap:
        name: locust-script
