k8s/locust-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  locust-service
spec:
  selector:
    app:  locust
  type:  LoadBalancer
  ports:
    - port:  8089
      targetPort:  8089
