k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: fox-game-service
spec:
  selector:
    app: fox-game
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 1234
